state.txt
iteration: 10
last_code: "[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538e20>: Failed to establish a new connection: [Errno 111] Connection refused'))"
last_error: "  File "/tmp/tmpron58fy_.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538e20>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
"
